Listar Entradas por id de sucursal
Nuevo EndPoint listar las entradas de un sucursal agregado el endpoint en swagger, ruta y controlador
