# src/controllers/Entradas.js
@@ -150,5 +150,39 @@ const actualizar = async(req, res)=>{
     })
 }
 
+//GET
+const listarId = async(req, res) =>{
+    const idSucursal = req.params.idSucursal;
+    console.log(idSucursal);
+    let model = await Entradas.find({idSucursal : idSucursal}, (error, data) =>{
+        if(error){
+            res.json({
+                mensaje : "Error al listar las entradas",
+                error
+            });
+        }
+    })
+    
+    let model2 = [];
 
-module.exports = {crear, listar, actualizar}
+    model.forEach(element =>{
+
+        let fecha = element.Fecha
+        let fechaArreglada = format(fecha, "dd-mm-yyyy");
+        let model3 = {_id : element._id,
+            Fecha : fechaArreglada,
+            Detalle: element.Detalle,
+            idProducto: element.idProducto,
+            Cantidad: element.Cantidad,
+            Monto: element.Monto,
+            idSucursal: element.idSucursal}
+
+         model2.push(model3)    
+        
+    })
+
+    res.json(model2);
+}
+
+
+module.exports = {crear, listar, actualizar, listarId}
